--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,13 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="current-player">
+      <div class="player-name"></div>
+      <div class="board-container"></div>
+    </div>
+    <div id="other-player">
+      <div class="player-name"></div>
+      <div class="board-container"></div>
+    </div>
   </body>
 </html>
